# zohd

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  DEVELOPMENT.md  LICENSE  README.md  TESTING.md  build.sh  install.sh  test.sh  test_parse.sh
src/: main.cpp
src/cli/: output_formatter.cpp  output_formatter.hpp
src/platform/: linux_impl.cpp  platform_interface.hpp
